--- a/jspProject1/style1.css
+++ b/jspProject1/style1.css
@@ -26,6 +26,7 @@ body {
 }
 
 #left-slide-container a:hover {
+  transition: 0.5s;
   background: rgb(116, 116, 116);
 }
 .close-btn-box {
@@ -135,10 +136,30 @@ li {
   display: block;
 }
 .drop-menu-1 li {
-  height: 50px;
+  line-height: 30px;
+  height: 30px;
+  width: 80px;
+}
+.drop-menu-1 li:hover {
+  transition: 0.5s;
+  background: rgb(116, 116, 116);
+}
+.drop-menu-1 a {
+  text-decoration: none;
+  color: black;
 }
 .drop-menu-2 li {
-  height: 50px;
+  line-height: 30px;
+  height: 30px;
+  width: 80px;
+}
+.drop-menu-2 li:hover {
+  transition: 0.5s;
+  background: rgb(116, 116, 116);
+}
+.drop-menu-2 a {
+  text-decoration: none;
+  color: black;
 }
 .home-img {
   margin-left: 10px;
